// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syntax functions test lex-state 1`] = `
Object {
  "grammar": Object {
    "rules": Array [
      Object {
        "ltoken": "S",
        "pattern": Array [
          "A",
          "B2",
          "C",
        ],
      },
    ],
    "start_symbol": "S",
  },
  "lex": Object {
    "rules": Array [
      Object {
        "pattern": "a",
        "token": "A",
      },
      Object {
        "pattern": "b",
        "states": Array [
          "state1",
          "state2",
        ],
        "token": "B",
      },
      Object {
        "pattern": "b",
        "states": Array [
          "default",
        ],
        "token": "B2",
      },
      Object {
        "pattern": "c",
        "token": "C",
      },
    ],
  },
}
`;

exports[`syntax functions test lex-state 2`] = `
Object {
  "grammar": Object {
    "default_callback": " grammar_default_callback(); ",
    "rules": Array [
      Object {
        "ltoken": "S",
        "pattern": Array [
          "A",
        ],
      },
    ],
    "start_symbol": "S",
  },
  "lex": Object {
    "begin_callback": " lex_begin_callback(); ",
    "default_callback": " lex_default_callback(); ",
    "end_callback": " lex_end_callback(); ",
    "rules": Array [
      Object {
        "pattern": "a",
        "token": "A",
      },
    ],
  },
}
`;
